# thresher

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  opencode.json  pyproject.toml  scanner.toml.example  thresher.toml.example  todo.txt
docker/: Dockerfile  Dockerfile.scanner-deps
docker/scripts/: build_manifest.py  detect.sh  download_go.sh  download_hidden.sh  download_node.sh  download_python.sh  download_rust.sh  manifest.sh  run.sh
docs/: CNAME  branding.html  index.html  install  report.html  shell-branding.sh
docs/data/: remediations.json
docs/v2-planning/: dependency-resolution.md  host-boundary-hardening.md  implementation_order.md  network-hardening-spec.md
docs/v3-planning/: notes.md
documentation/: README.md  agent-loop.md  architecture.md  getting-started.md  infosec-background.md  overview.md  scanners.md  scoring-and-reports.md  security-model.md
documentation/archived-planning-docs/: IMPLEMENTATION_PLAN.md  SPEC.md  idea.md
documentation/design-decisions/: README.md  agent-isolation.md  agent-structured-response.md  agent-tools.md  agents-structured-output.md  agents.md  ascii-art.md  benchmarks.md  containers.md  dependency-resolution.md  docs-vs-documentation.md  harness.md  pipeline.md  report.md  scanners-vs-agents.md  scanners.md  stages.md  tests.md
documentation/planning/: README.md
documentation/prebuild-stuff/: plan_test.md  threat-scanner-research.md
documentation/scanners/: README.md  bandit.md  capa.md  cargo-audit.md  checkov.md  clamav.md  gitleaks.md  govulncheck.md  grype.md  guarddog.md  hadolint.md  osv.md  scancode.md  semgrep.md  syft.md  trivy.md  yara.md
documentation/v2-planning/: README.md  branding.md  improved-scanner.md  rebuild-research.md  sources.md
documentation/v3-planning/: 2026-04-05-harness-architecture-design.md  2026-04-05-harness-architecture.md  notes.md  scan-results-review.md  v2-scan-validaitions.md
documentation/v4-planning/: notes.md  research_links.md
lima/: scanner.yaml  thresher.yaml
report_maker/: example_report.html  report_maker_spec.md
rules/semgrep/: supply-chain.yaml
site/: branding.html  index.html  install
tests/: conftest.py
vm_scripts/: download_deps.sh  firewall.sh  lockdown.sh  provision.sh  run_scanners.sh  safe_clone.sh  scanner-docker  validate_adversarial_output.sh  validate_analyst_output.sh  validate_predep_output.sh
(+196 files in other folders)
